--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecerita linda que es diferente
+                Cabecerita Fea
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
