agregando imagen desde una URL

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>parrafo personalizado para prueba con git merge</p>
+                <p>
+                    <img src="https://static.platzi.com/media/tmp/class-files/github/hyperblog/hyperblog-e58f3ea6f1aece8086210974a68c0cd3b575e9f1/imagenes/dragon.png" width="100%"/>
+                </p>
             </div>
         </div>
     </body>
